--- a/index.html
+++ b/index.html
@@ -100,17 +100,18 @@
 
         <!-- Books Sidebar with Carousel -->
         <aside class="books-sidebar">
-            <h2>Our Stories</h2>
+            <h2>Made with Heart!</h2>
             <div class="carousel-container">
                 <div class="carousel-wrapper">
                     <div class="books-stack" id="booksStack">
                         <div class="book-card">
-                            <div class="book-cover">Book Cover 1</div>
-                            <h3>The Golden Feather</h3>
-                            <p>A heartwarming tale of friendship and adventure</p>
-                            <a href="https://amazon.com" class="book-link" target="_blank">Get Your Copy →</a>
+                            <div class="book-cover">Comming Soon...</div>
+                            <h3>In a few days</h3>
+                            <p>Something exciting is coming soon—stay tuned!</p>
+                            <!-- <a href="https://amazon.com" class="book-link" target="_blank">Get Your Copy →</a> -->
                         </div>
-                        <div class="book-card">
+
+                        <!-- <div class="book-card">
                             <div class="book-cover">Book Cover 2</div>
                             <h3>Whispers in the Willow</h3>
                             <p>Discover the magic hidden in everyday moments</p>
@@ -133,13 +134,13 @@
                             <h3>Dancing with Stars</h3>
                             <p>An enchanting tale of dreams and courage</p>
                             <a href="https://amazon.com" class="book-link" target="_blank">Get Your Copy →</a>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
-                <div class="carousel-controls">
+                <!-- <div class="carousel-controls">
                     <button class="carousel-btn" id="prevBtn" aria-label="Previous book">↑</button>
                     <button class="carousel-btn" id="nextBtn" aria-label="Next book">↓</button>
-                </div>
+                </div> -->
             </div>
         </aside>
     </div>
