update main text

--- a/index.html
+++ b/index.html
@@ -62,18 +62,36 @@
                 <!-- Paper Content -->
                 <div class="paper">
                     <div class="flourish">❦</div>
-                    <h1>Welcome to DuckyHug</h1>
-                    <h2>Stories that Warm Hearts and Spark Imagination</h2>
+                    <h1>Welcome to Our Family's Journey</h1>
+                    <h2>From Mountain Roots to City Streets – Raising Extraordinary Kids Through Love, Stories, and Tradition</h2>
                     <div class="divider"></div>
                     <p>
-                        At DuckyHug, we believe in the magic of storytelling. Our tales are crafted with love, designed to transport readers of all ages to worlds filled with wonder, adventure, and heartfelt moments that linger long after the last page is turned.
-                    </p>
+                        We're so glad you found us. We're just two parents who grew up in the mountains, surrounded by rich traditions and a close-knit community. Life brought us to the suburbs of a big city, and honestly? We weren't sure how we'd navigate raising our children between two worlds.                    </p>
                     <p>
-                        We are a duo of passionate authors dedicated to creating stories that resonate with the North American spirit—tales of friendship, courage, and the simple joys that make life beautiful. Whether you're curling up with a book on a rainy afternoon or sharing a story with loved ones, our books are here to bring comfort and delight.
-                    </p>
+                        But here's what we discovered: <strong>love, creativity, and staying true to who you are can work magic.</strong></p>
                     <p>
-                        Join us on this literary journey, and discover stories that will make you smile, think, and feel truly embraced by the warmth of a good book.
-                    </p>
+                        Today, our three kids are thriving in ways that still amaze us. Our 8-year-old daughter plays both cello and violin, her sister, 6-year-old, has fallen in love with the piano. And our 2-year-old? He's already speaking three languages alongside his sisters. They're excelling in school, they're proud of where they come from, and they've embraced their new community with open hearts.</p>
+                        <p>The best part? None of this required expensive programs, intense pressure, or sacrificing family time. It happened through storytelling, simple creative resources, and an approach that honors both heritage and growth.</p>
+                        <p>We created stories for our children – tales that taught values, sparked imagination, and connected them to their roots. We found methods that didn't cost a dime but gave us priceless results. And now, we want to share all of it with you.
+                            Here, you'll find:</p>
+                            <p>
+                                <ul style="list-style: none; padding-left: 0; margin: 0;">
+                                    <li>
+                                    📚 Original stories and books we created for our kids
+                                </li>
+                                <li>
+                                    💡 Practical parenting advice that actually works
+                                </li>
+                                <li>
+                                    🌟 Resources for raising bilingual, culturally-grounded children
+                                </li>
+                                <li>
+                                    ❤️ Real experiences from our family to yours
+                                </li>
+                            </ul>
+                            </p>
+                            <p>Whether you're raising kids across cultures, looking for meaningful ways to connect with your children, or just trying to figure out this whole parenting thing – you're in the right place.
+                                Let's walk this journey together.</p>
                     <div class="divider"></div>
                     <div class="flourish">❦</div>
                 </div>
