meta tags and favicon

--- a/index.html
+++ b/index.html
@@ -1,24 +1,152 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
+    <title>DuckyHug - Stories That Warm Hearts | Multicultural Parenting Advice & Free Resources</title>
+
+
+
+
+    <meta name="title" content="DuckyHug - Stories That Warm Hearts | Multicultural Parenting Advice & Free Resources">
+    <meta name="description"
+        content="Heartwarming children's stories and practical parenting tips for raising bilingual, culturally-grounded kids. Free resources from parents to parents.">
+    <meta name="keywords"
+        content="parenting advice, multicultural parenting, bilingual children, children's stories, free parenting resources, raising bilingual kids, cultural heritage, parenting tips, bedtime stories">
+    <meta name="author" content="DuckyHug">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="DuckyHug - Stories that warm hearts and spark imagination. Discover heartwarming tales for all ages.">
-    <meta name="keywords" content="children's books, stories, authors, heartwarming tales">
-    <title>DuckyHug - Stories that Warm Hearts</title>
-    
+    <meta charset="UTF-8">
+    <link rel="canonical" href="https://duckyhug.com/">
+
+    <!-- Open Graph / Facebook Meta Tags -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://duckyhug.com/">
+    <meta property="og:title" content="DuckyHug - Stories That Warm Hearts | Multicultural Parenting Advice & Free Resources">
+    <meta property="og:description"
+        content="Heartwarming children's stories and practical parenting tips for raising bilingual, culturally-grounded kids. Free resources from parents to parents.">
+    <meta property="og:image" content="https://duckyhug.com/images/og-image.jpg">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:site_name" content="Stories That Warm Hearts">
+    <meta property="og:locale" content="en_US">
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:url" content="https://duckyhug.com/">
+    <meta name="twitter:title" content="Stories That Warm Hearts | Multicultural Parenting Advice & Free Resources">
+    <meta name="twitter:description"
+        content="Heartwarming children's stories and practical parenting tips for raising bilingual, culturally-grounded kids. Free resources from parents to parents.">
+    <meta name="twitter:image" content="https://duckyhug.com/images/twitter-image.jpg">
+
+    <!-- Additional SEO Meta Tags -->
+    <meta name="robots" content="index, follow">
+    <meta name="googlebot" content="index, follow">
+    <meta name="language" content="English">
+    <meta name="revisit-after" content="7 days">
+    <meta name="distribution" content="global">
+    <meta name="rating" content="general">
+
+    <!-- Geo Targeting -->
+    <meta name="geo.region" content="US">
+    <meta name="geo.region" content="CA">
+    <meta name="geo.placename" content="United States">
+    <meta name="geo.placename" content="Canada">
+
+    <!-- Mobile App Meta Tags (if applicable in future) -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="default">
+    <meta name="apple-mobile-web-app-title" content="Stories That Warm Hearts">
+
+    <!-- Theme Color for Mobile Browsers -->
+    <meta name="theme-color" content="#25556c">
+    <meta name="msapplication-navbutton-color" content="#25556c">
+    <meta name="apple-mobile-web-app-status-bar-style" content="#25556c">
+
+    <!-- Structured Data / JSON-LD Schema Markup -->
+    <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebSite",
+  "name": "Stories That Warm Hearts",
+  "alternateName": "Mountain to Main Street Parenting",
+  "url": "https://duckyhug.com",
+  "description": "Heartwarming children's stories and practical parenting advice for raising bilingual, culturally-grounded kids.",
+  "potentialAction": {
+    "@type": "SearchAction",
+    "target": "https://duckyhug.com/search?q={search_term_string}",
+    "query-input": "required name=search_term_string"
+  }
+}
+</script>
+
+    <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Organization",
+  "name": "Stories That Warm Hearts",
+  "url": "https://duckyhug.com",
+  "logo": "https://duckyhug.com/images/logo.png",
+  "description": "A parenting platform sharing stories, advice, and resources for raising bilingual, multicultural children.",
+  "foundingDate": "2025",
+  "founders": [
+    {
+      "@type": "Person",
+      "name": "DuckyHug"
+    }
+  ],
+  "sameAs": [
+    "https://www.facebook.com/duckyhug",
+    "https://www.instagram.com/duckyhug",
+    "https://x.com/duckyhug"
+  ],
+  "contactPoint": {
+    "@type": "ContactPoint",
+    "contactType": "Customer Service",
+    "email": "contact@duckyhug.com"
+  }
+}
+</script>
+
+    <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Blog",
+  "name": "Stories That Warm Hearts Blog",
+  "description": "Parenting advice, children's stories, and resources for multicultural families",
+  "url": "https://duckyhug.com/blog",
+  "publisher": {
+    "@type": "Organization",
+    "name": "Stories That Warm Hearts",
+    "logo": {
+      "@type": "ImageObject",
+      "url": "https://duckyhug.com/images/logo.png"
+    }
+  }
+}
+</script>
+
+    <!-- Favicon Links -->
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="manifest" href="/site.webmanifest">
+
+
     <!-- Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
-    
+    <link
+        href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Open+Sans:wght@400;600&display=swap"
+        rel="stylesheet">
+
     <!-- Stylesheet -->
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <!-- Header -->
     <header>
         <div class="logo">
             <div class="logo-circle">
-                <a href="https://duckyhug.com"><span class="logo-icon"><img src="/img/ducky_hug_logo.png" width="100"></span></a>
+                <a href="https://duckyhug.com"><span class="logo-icon"><img src="/img/ducky_hug_logo.png"
+                            width="100"></span></a>
             </div>
             <div class="logo-text"><a href="https://duckyhug.com" style="text-decoration: none;">DuckyHug</div>
         </div>
@@ -28,12 +156,14 @@
     <div class="social-sidebar">
         <a href="https://facebook.com" target="_blank" class="social-icon facebook" aria-label="Follow us on Facebook">
             <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
-                <path d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z"/>
+                <path
+                    d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z" />
             </svg>
         </a>
         <a href="https://youtube.com" target="_blank" class="social-icon youtube" aria-label="Subscribe on YouTube">
             <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
-                <path d="M23.498 6.186a3.016 3.016 0 0 0-2.122-2.136C19.505 3.545 12 3.545 12 3.545s-7.505 0-9.377.505A3.017 3.017 0 0 0 .502 6.186C0 8.07 0 12 0 12s0 3.93.502 5.814a3.016 3.016 0 0 0 2.122 2.136c1.871.505 9.376.505 9.376.505s7.505 0 9.377-.505a3.015 3.015 0 0 0 2.122-2.136C24 15.93 24 12 24 12s0-3.93-.502-5.814zM9.545 15.568V8.432L15.818 12l-6.273 3.568z"/>
+                <path
+                    d="M23.498 6.186a3.016 3.016 0 0 0-2.122-2.136C19.505 3.545 12 3.545 12 3.545s-7.505 0-9.377.505A3.017 3.017 0 0 0 .502 6.186C0 8.07 0 12 0 12s0 3.93.502 5.814a3.016 3.016 0 0 0 2.122 2.136c1.871.505 9.376.505 9.376.505s7.505 0 9.377-.505a3.015 3.015 0 0 0 2.122-2.136C24 15.93 24 12 24 12s0-3.93-.502-5.814zM9.545 15.568V8.432L15.818 12l-6.273 3.568z" />
             </svg>
         </a>
     </div>
@@ -63,35 +193,48 @@
                 <div class="paper">
                     <div class="flourish">❦</div>
                     <h1>Welcome to Our Family's Journey</h1>
-                    <h2>From Mountain Roots to City Streets – Raising Extraordinary Kids Through Love, Stories, and Tradition</h2>
+                    <h2>From Mountain Roots to City Streets – Raising Extraordinary Kids Through Love, Stories, and
+                        Tradition</h2>
                     <div class="divider"></div>
                     <p>
-                        We're so glad you found us. We're just two parents who grew up in the mountains, surrounded by rich traditions and a close-knit community. Life brought us to the suburbs of a big city, and honestly? We weren't sure how we'd navigate raising our children between two worlds.                    </p>
+                        We're so glad you found us. We're just two parents who grew up in the mountains, surrounded by
+                        rich traditions and a close-knit community. Life brought us to the suburbs of a big city, and
+                        honestly? We weren't sure how we'd navigate raising our children between two worlds. </p>
                     <p>
-                        But here's what we discovered: <strong>love, creativity, and staying true to who you are can work magic.</strong></p>
+                        But here's what we discovered: <strong>love, creativity, and staying true to who you are can
+                            work magic.</strong></p>
                     <p>
-                        Today, our three kids are thriving in ways that still amaze us. Our 8-year-old daughter plays both cello and violin, her sister, 6-year-old, has fallen in love with the piano. And our 2-year-old? He's already speaking three languages alongside his sisters. They're excelling in school, they're proud of where they come from, and they've embraced their new community with open hearts.</p>
-                        <p>The best part? None of this required expensive programs, intense pressure, or sacrificing family time. It happened through storytelling, simple creative resources, and an approach that honors both heritage and growth.</p>
-                        <p>We created stories for our children – tales that taught values, sparked imagination, and connected them to their roots. We found methods that didn't cost a dime but gave us priceless results. And now, we want to share all of it with you.
-                            Here, you'll find:</p>
-                            <p>
-                                <ul style="list-style: none; padding-left: 0; margin: 0;">
-                                    <li>
-                                    📚 Original stories and books we created for our kids
-                                </li>
-                                <li>
-                                    💡 Practical parenting advice that actually works
-                                </li>
-                                <li>
-                                    🌟 Resources for raising bilingual, culturally-grounded children
-                                </li>
-                                <li>
-                                    ❤️ Real experiences from our family to yours
-                                </li>
-                            </ul>
-                            </p>
-                            <p>Whether you're raising kids across cultures, looking for meaningful ways to connect with your children, or just trying to figure out this whole parenting thing – you're in the right place.
-                                Let's walk this journey together.</p>
+                        Today, our three kids are thriving in ways that still amaze us. Our 8-year-old daughter plays
+                        both cello and violin, her sister, 6-year-old, has fallen in love with the piano. And our
+                        2-year-old? He's already speaking three languages alongside his sisters. They're excelling in
+                        school, they're proud of where they come from, and they've embraced their new community with
+                        open hearts.</p>
+                    <p>The best part? None of this required expensive programs, intense pressure, or sacrificing family
+                        time. It happened through storytelling, simple creative resources, and an approach that honors
+                        both heritage and growth.</p>
+                    <p>We created stories for our children – tales that taught values, sparked imagination, and
+                        connected them to their roots. We found methods that didn't cost a dime but gave us priceless
+                        results. And now, we want to share all of it with you.
+                        Here, you'll find:</p>
+                    <p>
+                    <ul style="list-style: none; padding-left: 0; margin: 0;">
+                        <li>
+                            📚 Original stories and books we created for our kids
+                        </li>
+                        <li>
+                            💡 Practical parenting advice that actually works
+                        </li>
+                        <li>
+                            🌟 Resources for raising bilingual, culturally-grounded children
+                        </li>
+                        <li>
+                            ❤️ Real experiences from our family to yours
+                        </li>
+                    </ul>
+                    </p>
+                    <p>Whether you're raising kids across cultures, looking for meaningful ways to connect with your
+                        children, or just trying to figure out this whole parenting thing – you're in the right place.
+                        Let's walk this journey together.</p>
                     <div class="divider"></div>
                     <div class="flourish">❦</div>
                 </div>
@@ -101,15 +244,11 @@
             <div class="email-signup">
                 <div class="flourish">✉</div>
                 <h3>Join Our Story Circle</h3>
-                <p>Be the first to hear about new releases, exclusive content, and special reader perks delivered straight to your inbox.</p>
+                <p>Be the first to hear about new releases, exclusive content, and special reader perks delivered
+                    straight to your inbox.</p>
                 <form class="email-form" id="emailForm">
-                    <input 
-                        type="email" 
-                        class="email-input" 
-                        placeholder="Enter your email address" 
-                        required
-                        aria-label="Email address"
-                    >
+                    <input type="email" class="email-input" placeholder="Enter your email address" required
+                        aria-label="Email address">
                     <button type="submit" class="email-submit">Count Me In! →</button>
                 </form>
                 <p class="form-message" id="formMessage"></p>
@@ -166,11 +305,13 @@
     <!-- Footer -->
     <footer>
         <p><strong>DuckyHug</strong> - Stories that embrace the soul</p>
-        <p>Send us a message anytime <a href="https://www.facebook.com/DuckyHug">@duckyhug</a> - we’d love to hear from you!</p>
+        <p>Send us a message anytime <a href="https://www.facebook.com/DuckyHug">@duckyhug</a> - we’d love to hear from
+            you!</p>
         <p>&copy; 2025 DuckyHug. All rights reserved.</p>
     </footer>
 
     <!-- JavaScript -->
     <script src="script.js"></script>
 </body>
+
 </html>
