--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
             </div>
 
             <!-- Email Signup Section -->
-            <div class="email-signup">
+            <!-- <div class="email-signup">
                 <div class="flourish">✉</div>
                 <h3>Join Our Story Circle</h3>
                 <p>Be the first to hear about new releases, exclusive content, and special reader perks delivered
@@ -252,7 +252,9 @@
                     <button type="submit" class="email-submit">Count Me In! →</button>
                 </form>
                 <p class="form-message" id="formMessage"></p>
-            </div>
+            </div> -->
+            
+            <script async data-uid="d2c665f9f5" src="https://duckyhug.kit.com/d2c665f9f5/index.js"></script>
         </section>
 
         <!-- Books Sidebar with Carousel -->
