after publishing first book

--- a/index.html
+++ b/index.html
@@ -264,10 +264,10 @@
                 <div class="carousel-wrapper">
                     <div class="books-stack" id="booksStack">
                         <div class="book-card">
-                            <div class="book-cover">Comming Soon...</div>
-                            <h3>In a few days</h3>
-                            <p>Something exciting is coming soon—stay tuned!</p>
-                            <!-- <a href="https://amazon.com" class="book-link" target="_blank">Get Your Copy →</a> -->
+                            <div class="book-cover">Christmas LOLs For Kids</div>
+                            <h3>243 Jokes That Sleigh</h3>
+                            <p>Premium Christmas Gift for Boys and Girls</p>
+                            <a href="https://www.amazon.com/dp/B0G37FC8BR/ref=sr_1_4?dib=eyJ2IjoiMSJ9.R1BFUHivy3pj1IRuKwoCoayS3x9iCzk4HEIB1NBi84A.76JrvOEkxn3E37358RSXreQAd_UMm6BtGLvhHqFTuao&dib_tag=se&qid=1763769685&refinements=p_27%3ADuckyHug&s=books&sr=1-4&text=DuckyHug" class="book-link" target="_blank">Get Your Copy →</a> -->
                         </div>
 
                         <!-- <div class="book-card">
